# cspice-cmake-spiceypy

./: .gitignore  CMakeLists.txt  cspice_exports.json  cspice_exports_full.json  cspice_exports_medium.json  cspice_exports_vlite.json  cspice_flavor.c  cspice_flavor.h.in  test_cspice.c
.github/workflows/: ci-build.yml
cmake/: CspiceCommon.cmake  cspiceConfig.cmake.in
